compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__case__utf16_match_on_empty_bit_array_string_in_middle.snap
---
source: compiler-core/src/javascript/tests/case.rs
expression: "\npub fn main(x) {\n  case x {\n    <<\"x\":utf16, \"\":utf16, \"z\":utf16, >> -> \"a\"\n    _ -> \"b\"\n  }\n}\n"
---
----- SOURCE CODE

pub fn main(x) {
  case x {
    <<"x":utf16, "":utf16, "z":utf16, >> -> "a"
    _ -> "b"
  }
}


----- COMPILED JAVASCRIPT
export function main(x) {
  if (
    x.bitSize >= 16 &&
    x.byteAt(0) === 0 && x.byteAt(1) === 120 &&
    x.bitSize === 32 &&
    x.byteAt(2) === 0 && x.byteAt(3) === 122
  ) {
    return "a";
  } else {
    return "b";
  }
}
